--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ header {
   color: #fff;
   padding: 15px 20px;
   position: fixed;
-  width: 100px;
+  width: 100%;
   top: 0;
   z-index: 1000;
   display: flex;
